# netflix_dataset

./: .env  .gitignore  README.md  docker-compose.yaml  netflix_transform.ipynb  pyproject.toml
