[tool.poetry]
name = "netflix-dataset"
version = "0.1.0"
description = ""
authors = ["Gusak Vadim"]
readme = "README.md"
packages = [{include = "netflix_dataset"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
